Adding the thing!

--- a/app/views/layouts/templates/default.html.erb
+++ b/app/views/layouts/templates/default.html.erb
@@ -13,6 +13,7 @@
 		
 	</head>
 	<body>
+		<%= cms_toolbar %>
 		<div id="nav">
 			<%= render_menu(:depth => 3, :show_all_siblings => true) %>
 		</div>
